// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`People reducer: Should handle PEOPLE_FILL action 1`] = `
Object {
  "data": undefined,
  "error": false,
  "isFetching": false,
}
`;

exports[`People reducer: Should handle PEOPLE_SET_FETCHING_ERROR action 1`] = `
Object {
  "data": Array [],
  "error": undefined,
  "isFetching": false,
}
`;

exports[`People reducer: Should handle PEOPLE_START_FETCHING action 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": true,
}
`;

exports[`People reducer: Should handle PEOPLE_STOP_FETCHING action 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": false,
}
`;

exports[`People reducer: Should return initial state by default 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": false,
}
`;
